# ecommerce_database_analytics

./: .env  .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: greetings.yml
api/: routes.py  schema.py  utils.py
database/: crud.py  db_setup.py  model.py  models.py  utils.py
ecomerce_api/: README.md  main.py
ecomerce_api/database/: crud.py  db_setup.py  model.py
ecomerce_api/notebook/: data_modelling.ipynb
ecomerce_api/scripts/: config.py  load_data.py
notebook/: data_modelling.ipynb
scripts/: config.py  load_data.py  utils.py
tests/: test_load_data.py
utils/: logger.py
