[project]
name = "database-fundamentals"
version = "0.1.0"
description = ""
authors = [
    {name = "Damilola Adeniyi",email = "adeniiyidamilola246@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
